<resources>
    <string name="app_name">CycleShare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="stations">Stations</string>
    <string name="my_trips">My Trips</string>
    <string name="profile">Profile</string>

    <string name="sign_out">Sign Out</string>
    <string name="book_bike_title">Book a Bike</string>

    <string name="station_title">From Station: </string>
    <string name="bike_title">Bike: </string>

    <string name="date">Date:</string>
    <string name="to_station">To Station:</string>
    <string name="book_bike">Book Bike</string>

    <string name="user_name_title">Name: </string>
    <string name="email_user">Email: </string>

    <string name="select_time">Select a time for the trip</string>
    <string name="select_date">Select a date for the trip</string>

    <string name="select_station">Select a station</string>

    <string name="book_success">You have booked a bike to transport yourself.</string>
    <string name="ok">OK</string>

    <string name="id_trip_title">Trip ID: </string>
    <string name="state_title">State: </string>
    <string name="trip_date_title">Trip Date: </string>
    <string name="trip_time_title">Trip Time: </string>

    <string name="change_profile_picture">Change your profile image</string>
    <string name="use_google_picture">Use your Google account picture</string>

</resources>