<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_trip_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:padding="16dp"
    app:cardCornerRadius="4dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIdTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_trip_title"
                android:textColor="@color/title"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:layout_marginStart="16dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvStateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state_title"
                android:textColor="@color/title"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:layout_marginStart="16dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_date_title"
                android:textColor="@color/title"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:layout_marginStart="16dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_time_title"
                android:textColor="@color/title"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:layout_marginStart="16dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBikeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bike_title"
                android:textColor="@color/title"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvBike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:layout_marginStart="16dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFromStationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/station_title"
                android:textColor="@color/title"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvFromStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:layout_marginStart="16dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvToStationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_station"
                android:textColor="@color/title"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvToStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:layout_marginStart="16dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>